Update QuoteThreadServiceImpl.java